Prepare Resolute for migration to its own repo